test/corpus/statements.txt
==========
Statement
==========

Print;

---

(source_file
  (statement
    (identifier)))

=======================
Statement w/o semicolon
=======================

Print

---

(source_file
  (statement
    (identifier)))

===========
Statements
===========

Print;
Print;
Print;

---

(source_file
  (statement
    (identifier))
  (statement
    (identifier))
  (statement
    (identifier)))

==============================
Statements w/o last semicolon
==============================

Print;
Print;
Print

---

(source_file
  (statement
    (identifier))
  (statement
    (identifier))
  (statement
    (identifier)))

================================
Statements >1 literals & idents
================================

Print + 1 2;
Print "abc";
Print . .1 ..1;

---

(source_file
  (statement
    (identifier)
    (identifier)
    (number)
    (number))
  (statement
    (identifier)
    (string))
  (statement
    (identifier)
    (identifier)
    (identifier)
    (identifier)))

